--- a/docs/glossary.Rmd
+++ b/docs/glossary.Rmd
@@ -626,6 +626,21 @@ The value column is an alternative (yet equivalent) representation of the connec
 
 The value column contain information about the connectivity between donor/recipient sites, but their values depend on the type of connectivity matrix being used (*e.g.* [Probability](glossary.html#probability), [Migration](glossary.html#migration), or [Flow](glossary.html#flow)).
 
+## Edge List with Habitat
+
+Here, the Edge List structure from above is duplicated for each unique type (*e.g.* species, or dispersal trait). The first column now contains the habitat ID, The remaining columns are exactly as Edge List, above (donor site ID, recipient site ID, and connectivity value). 
+
+| habitat | id1 | id2 | value |
+|:----:|:---:|:---:|:-----:|
+|   1  |  1  |  1  |  0.1  |
+|   1  |  1  |  2  |  0.02 |
+|   1  |  1  |  3  | 0.005 |
+|   1  |  1  |  4  |  0.01 |
+|  ... | ... | ... |  ...  |
+
+
+The elements (*i.e.* cells) contain information about the connectivity between donor/recipient sites and since this is only used for "Landscape Connectivity" their values are [Probabilities](glossary.html#probability).
+
 ## Edge List with Time
 
 Here, the Edge List structure from above is duplicated for each unique time-step. The first column now contains the time-step ID , The remaining columns are exactly as Edge List, above (donor site ID, recipient site ID, and connectivity value). 
@@ -645,7 +660,7 @@ The elements (*i.e.* cells) contain information about the connectivity between d
 
 Here, the Edge List structure from above is duplicated for each unique type (*e.g.* species, or dispersal trait). The first column now contains the type ID, The remaining columns are exactly as Edge List, above (donor site ID, recipient site ID, and connectivity value). 
 
-| Type | id1 | id2 | value |
+| type | id1 | id2 | value |
 |:----:|:---:|:---:|:-----:|
 |   1  |  1  |  1  |  0.1  |
 |   1  |  1  |  2  |  0.02 |
