--- a/docs/tutorial.Rmd
+++ b/docs/tutorial.Rmd
@@ -35,7 +35,7 @@ proj <- "+proj=merc +a=6378137 +b=6378137 +lat_ts=0.0 +lon_0=0.0 +x_0=0.0 +y_0=0
 
 Marxan Connect was conceptualized in response to the growing need for connectivity to be incorporated into conservation planning on the land and sea. Our aim is to help conservation practitioners incorporate connectivity into the widely-used decision-support tool, Marxan. Marxan Connect is a graphical user interface that can be used to preprocess and prepare existing connectivity data for inclusion in a [Marxan](marxan.org) analysis (Figure 1). In terms of connectivity data, practitioners will need to have access to connectivity data (e.g. dispersal models, GPS tagging data, etc) or at least information about the landscape (see [Connectivity Input](./glossary.html#connectivity_input) section for more details). We note there are two primary ways to incorporate connectivity data into the Marxan input files: 1) as a feature, or 2) as spatial dependencies between planning units (the boundary term). The differences between these approaches are discussed in more detail below. 
 
-![**Figure 1:** *Comparison of workflows between Marxan and "Marxan Connect." Marxan Connect requires pre-existing connectivity data, which can be derived from animal tagging or telemetry data, genetics, dispersal models, resistance models, or geographic distance. These data are inputs into Marxan Connect, which can then be analyzed to derive connectivity metrics and/or connectivity strengths (i.e. spatial dependencies). These new data can be treated as connectivity features, and/or spatial dependencies between planning units which inform the Connectivity Strength Modifier (“the Boundary Length Modifier (BLM)” in standard Marxan). The cost data in the traditional Marxan analysis refers to the cost of protecting a planning unit (i.e. opportunity cost), not the meaning often used in landscape ecology of the ‘cost’ to traverse a landscape.*\label{workflow}](images/workflow.png)
+![**Figure 1:** *Comparison of workflows between the “representation only” standard approach to Marxan and “Marxan Connect.” Marxan Connect facilitates the use of connectivity data, derived from animal tagging data, genetics, dispersal models, resistance models, or geographic distance, by producing connectivity metrics and connectivity strengths (i.e. spatial dependencies that are used in the place of boundary definitions) before running Marxan. These connectivity metrics and linkage strengths are then used as inputs (connectivity-based conservation features or spatial dependencies) in the traditional Marxan workflow. The cost data in the traditional Marxan analysis refer to the cost of protecting a planning unit (i.e. opportunity cost), not the cost to traverse a landscape.*\label{workflow}](images/workflow.png)
 
 Beyond preprocessing, Marxan Connect also allows users to run the Marxan software internally or export data products (*e.g.* connectivity metrics, marxan files, etc) to run the analysis externally. 
 
@@ -91,7 +91,7 @@ When appropriate, high connectivity value planning units may also be "locked-in"
 
 
 
-![**Figure 3:** *Data processing workflow for two possible workflows for using raw connectivity data in spatial prioritization: 1) Connectivity as Spatial Dependency in the objective function (Raw Data -> Connectivity Matrix -> Connectivity as Spatial Dependency), or 2) Discrete conservation features (Raw Data -> Connectivity Matrix -> Continuous Metrics -> Threshold Setting -> Discretize Feature -> Target Setting. Red arrows indicate the conservation feature vs connectivity strength method decision point.* \label{general_workflow}](images/general_workflow_new.png)
+![**Figure 3:** *Data processing workflow for two possible methods for using raw connectivity data in spatial prioritization: 1) Connectivity as Spatial Dependency in the objective function (Raw Data -> Connectivity Matrix -> Connectivity as Spatial Dependency), or 1) Discrete conservation features (Raw Data -> Connectivity Matrix -> Continuous Metrics -> Threshold Setting -> Discrete Feature -> Target Setting). Black Arrows indicate a logical workflow, while red and yellow indicate a decision point. Red arrows indicate the conservation feature vs connectivity strength method decision point and yellow arrows new metric or new threshold decision point after target setting and post-hoc evaluation of conservation success.* \label{general_workflow}](images/general_workflow_new.png)
 
 ## Connectivity as spatial dependencies in the objective function
 
