--- a/docs/CSD_landscape.Rmd
+++ b/docs/CSD_landscape.Rmd
@@ -230,7 +230,7 @@ datatable(conmat[1:7,],rownames = FALSE, options = list(searching = FALSE))
 
 Now that we have explored the input files, we are ready to open Marxan Connect and load our project. Please load the `tutorial.MarCon` file in the **CSD_landscape** folder into Marxan Connect. You should not have to change any inputs in the project, but it is important to understand what these choices entail. 
 
-![**Figure 1:** *Loading Marxan Connect tutorial .*\label{workflow}](images/Load_tutorial.png)
+![**Figure 1:** *Loading Marxan Connect tutorial .*\label{workflow}](images/Load_tutorial_landscape.png)
 
 We will now step through the Marxan Connect workflow following the work flow tabs.
 
